--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
 
-    <meta name="language" content="English"/>
+    <meta name="language" content="Indonesia"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Help you solve Wordle puzzles when your vocabulary failes you." />
-    <meta name="keywords" content="wordle solver, wordle helper, wordle answer, wordle cheat"/>
-    <meta property="og:title" content="Wordle Helper">
-    <meta property="og:site_name" content="Wordle Helper">
-    <meta property="og:url" content="https://wordle.zxh.io">
-    <meta property="og:description" content="Help you solve Wordle puzzles!">
+    <meta name="description" content="Membantu kamu menjawab quiz katla" />
+    <meta name="keywords" content="bantuan katla, petunjuk katla, katla cheat"/>
+    <meta property="og:title" content="Petunjuk Katla">
+    <meta property="og:site_name" content="Petunjuk Katla">
+    <meta property="og:url" content="https://petunjuk-katla.vercel.app">
+    <meta property="og:description" content="Membantu menjawab quiz katla!">
     <meta property="og:type" content="website">
 
-    <title>Wordle Helper</title>
+    <title>Petunjuk Katla</title>
   </head>
 
   <body>
